<resources>
    <string name="login">Login</string>
    <string name="app_name">Auctus Trading</string>
    <string name="home_text">Do you want to become part of Auctus Trading?</string>
    <string name="join_now"><u>JOIN NOW</u></string>
    <string name="or">Or</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="short_description">Short description</string>
    <string name="invitation_code">Invitation code</string>
    <string name="agree_terms">Agree with all terms</string>
    <string name="remember_me">Remember Me</string>
    <string name="enter">Enter</string>
    <string name="submit">SUBMIT</string>
    <string name="send">SEND</string>
    <string name="continue_facebook">Continue with Facebook</string>
    <string name="continue_google">Continue with Google</string>
    <string name="forgot_click">Forgot Password?<u>Click Here</u></string>
    <string name="forgot_password">Please enter the email address used to register. Subsequently you will get a recovery email, to restore your password.</string>
    <string name="link_add_picture"><u>Add Picture</u></string>
    <string name="field_must_be_filled">Field must be filled.</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="remove_picture">Remove Picture</string>
</resources>
