<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".CameraGalleryPicker">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <Button
            android:id="@+id/btnGallery"
            android:layout_width="272dp"
            android:layout_height="70dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:lineSpacingExtra="10sp"
            android:onClick="onGalleryClicked"
            android:theme="@style/GreyCustomButton"
            android:text="@string/choose_from_gallery"/>

        <Button
            android:id="@+id/btnPicture"
            android:layout_width="272dp"
            android:layout_height="70dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:lineSpacingExtra="10sp"
            android:onClick="onTakePictureClicked"
            android:theme="@style/GreyCustomButton"
            android:text="@string/take_a_picture" />

        <Button
            android:id="@+id/btnRemovePicture"
            android:layout_width="272dp"
            android:layout_height="70dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:lineSpacingExtra="10sp"
            android:onClick="onRemovePictureClicked"
            android:theme="@style/GreyCustomButton"
            android:text="@string/remove_picture" />
    </LinearLayout>
</FrameLayout>