<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="217dp"
        android:layout_height="86dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:tint="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vector_logo" />

    <ImageView
        android:id="@+id/registration_avatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_avatar_svg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/add_picture_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/gilroy"
        android:text="@string/link_add_picture"
        android:textColor="#e6e6e6"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_avatar" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="190dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:fontFamily="@font/gilroy"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:shadowColor="#747474"
        android:textAlignment="center"
        android:textColor="#747474"
        android:textColorHint="#747474"
        android:textCursorDrawable="@null"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_picture_link" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="190dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:fontFamily="@font/gilroy"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:shadowColor="#747474"
        android:textAlignment="center"
        android:textColor="#747474"
        android:textColorHint="#747474"
        android:textCursorDrawable="@null"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="190dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:fontFamily="@font/gilroy"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:shadowColor="#747474"
        android:textAlignment="center"
        android:textColor="#747474"
        android:textColorHint="#747474"
        android:textCursorDrawable="@null"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <TextView
        android:id="@+id/description_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/gilroy"
        android:text="0 / 160"
        android:textColor="#808080"
        android:textSize="9sp"
        app:layout_constraintEnd_toEndOf="@+id/editDescription"
        app:layout_constraintTop_toTopOf="@+id/editDescription" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="190dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:fontFamily="@font/gilroy"
        android:hint="@string/short_description"
        android:inputType="text"
        android:shadowColor="#747474"
        android:textAlignment="center"
        android:textColor="#747474"
        android:textColorHint="#747474"
        android:textCursorDrawable="@null"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <EditText
        android:id="@+id/editInvitation"
        android:layout_width="190dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#747474"
        android:ems="10"
        android:fontFamily="@font/gilroy"
        android:hint="@string/invitation_code"
        android:inputType="text"
        android:shadowColor="#747474"
        android:textAlignment="center"
        android:textColor="#747474"
        android:textColorHint="#747474"
        android:textCursorDrawable="@null"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDescription" />

    <CheckBox
        android:id="@+id/checkBoxAcceptTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/gilroy"
        android:textColor="#747474"
        android:buttonTint="#747474"
        android:text="@string/agree_terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editInvitation" />

    <Button
        android:id="@+id/submitRegistration"
        android:layout_width="190dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/blueButtonColor"
        android:fontFamily="@font/gilroy"
        android:lineSpacingExtra="10sp"
        android:text="@string/submit"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAcceptTerms"
        app:layout_constraintVertical_bias="0.039" />

</android.support.constraint.ConstraintLayout>